--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Centered Video Website</title>
+    <title>lowk tuff music</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -44,7 +44,7 @@
     <div class="container">
         <div class="video-container">
             <video width="640" height="360" controls>
-                <source src="sizzle.mp4" type="video/mp4">
+                <source src="ifyouseemeoutonfrogiesarcade.mp4" type="video/mp4">
                 your browser cant watch my video :(
             </video>
         </div>
